test_suite/alan-2022-examples/passing/000131_pair.alan
source WI begin F2 := array 3 or false end
